// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render correctly with custom props 1`] = `
<span
  class="StyledText-r7l7li-0 fQYllB"
  color="primary"
>
  children
</span>
`;

exports[`<Text /> should render correctly with default props 1`] = `
<span
  class="StyledText-r7l7li-0 jexrhk"
  color="neutral"
>
  children
</span>
`;
